---------------------------------------------------------------------------------------------------
Version: 0.8.4
Date: 26. 12. 2017
  Bugfixes:
    - Fixed migration issue when migrating old save games from Dectorio 0.7.1 or earlier
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 20. 12. 2017
  Added:
    - Ability to place deep water and green deep water tiles
    - Ability to place trees
    - Map colours for all the painted concrete variants
  Changed:
    - Adjusted concrete layering to allow grid concrete and normal concrete to merge nicely
    - Updated grid concrete map colour to differentiate it from normal concrete
    - Adjusted icons for gravel items
  Bugfixes:
    - Fixed issue with grid concrete when high resolution graphics are active
  Locales:
    - Updated Korean translations
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 19. 12. 2017
  Added:
    - New grid-based Concrete item that reflects the classic 0.15 Factorio concrete style
  Changed:
    - Updated Painted concrete graphics to soften the 'brick' look
  Bugfixes:
    - Tweaks to concrete layering to clean up some buggy tile transitions
    - Removal of duplicate recipe definitions for walls
  Locales:
    - Updated German and Korean translations
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 18. 12. 2017
  Added:
    - New warning for incompatibilities when 'Picker Tweaks' mod is installed
  Changed:
    - Gravel is now a craftable item so as to avoid accidental placement of raw ore on the ground and to resolve the conflict it caused with the 'Picker Extended Version' mod
    - Improved handling when mods add signal colours that may conflict with those already added by Dectorio