@@ -52,6 +52,7 @@ reason-tech=[__1__] Reason: '__2__' duplicates technology that is already in Dec
 reason-item=[__1__] Reason: '__2__' duplicates an item that is already in Dectorio.
 reason-disable=[__1__] Reason: '__2__' disables functionality that is added by Dectorio.
 recommended-action=[__1__] Either remove '__2__' or disable the __3__ component in Dectorio mod startup settings.
+recommended-setting=[__1__] You can resolve this conflict by changing the '__2__' setting in __3__ mod settings.
 mod-portal=[__1__] Refer to the mod portal for further details.
 supported-mod-added=[__1__] Added support for __2__ mod.
 supported-mod-removed=[__1__] Removed support for __2__ mod.
