@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.8.4
-Date: 26. 12. 2017
+Date: 27. 12. 2017
+  Changed:
+    - Updated incompatible mod notification for PickerTweaks
   Bugfixes:
     - Fixed migration issue when migrating old save games from Dectorio 0.7.1 or earlier
 ---------------------------------------------------------------------------------------------------
